--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
         <div class="home-img">
             <div class="img-circle">
-                <img src="Pro_1-removebg-preview.png" alt="Photo de Daouda Doucoure">
+                <img src="Dev.jpg" alt="Photo de Daouda Doucoure">
             </div>
         </div>
    </section>
